some more changes in code

--- a/instaScrap.ipynb
+++ b/instaScrap.ipynb
@@ -25,9 +25,7 @@
     "from selenium.webdriver.common.by import By\n",
     "from selenium.common.exceptions import TimeoutException\n",
     "from selenium.webdriver.common.keys import Keys\n",
-    "\n",
     "import csv\n",
-    "import re\n",
     "import time\n",
     "\n",
     "username = \"ramavtar000112\"\n",
@@ -113,28 +111,8 @@
     "driver = fetchUsers(driver)\n",
     "\n",
     "\n",
-    "# driver.close()\n",
+    "driver.close()\n",
     "print(\"Successfully scrapped\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "https://www.instagram.com/\n",
-    "    \n",
-    "username = ramavatar000111\n",
-    "password = ramavatar@123\n",
-    "\n",
-    "\n",
-    "\n",
-    "def searchUser(driver):\n",
-    "    input_field = driver.find_element_by_xpath(\"//input[@placeholder='Search]\")\n",
-    "    input_field.click()\n",
-    "    input_field.send_keys(first_username_to_search)"
    ]
   }
  ],
